--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: /:year/:month/:day/:title/
 paginate: 5
 paginate_path: /page/:num/
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 exclude:
   - tools
