Add homepage and move to /blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name: XEWeb
+title: XEWeb
 description: XEWeb blog
 url: http://www.xeweb.net
-permalink: /:year/:month/:day/:title/
+permalink: /blog/:year/:month/:day/:title/
 paginate: 5
-paginate_path: /page/:num/
+paginate_path: /blog/page/:num/
 markdown: kramdown
 highlighter: rouge
 
