--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: XEWeb
 description: XEWeb blog
-url: http://www.xeweb.net
+url: https://www.xeweb.net
 permalink: /blog/:year/:month/:day/:title/
 paginate: 5
 paginate_path: /blog/page/:num/
@@ -10,3 +10,6 @@ highlighter: rouge
 exclude:
   - tools
   - vendor
+
+plugins:
+  - jekyll-redirect-from
